# APEA

./: CMakeLists.txt  LICENSE  README.md
src/capture/: DXGICapture.cpp  DXGICapture.h
src/core/: pipeline.cpp  pipeline.h
src/inference/: NndtInfer.cpp  NndtInfer.h  OnnxInfer.cpp  OnnxInfer.h  TRTInfer.cpp  TRTInfer.h
src/paint/: GDIPaint.cpp  GDIPaint.h
src/test/: captureTest.cpp  inferTest.cpp  onnxTest.cpp  paintTest.cpp  trtTest.cpp
workspace/: nanodet-plus-m_320.trt
